@@ -327,6 +327,8 @@
 #define SETTINGS_SOUNDEVENT_VOLUME_DEFAULT                 100
 #define SETTINGS_SOUNDEVENT_PLAYBACKMODE            "soundevents/playback-mode"
 #define SETTINGS_SOUNDEVENT_PLAYBACKMODE_DEFAULT    PLAYBACKMODE_DEFAULT
+#define SETTINGS_SOUNDEVENT_TTDEVICE                 "soundevents/use-tt-device"
+#define SETTINGS_SOUNDEVENT_TTDEVICE_DEFAULT                 true
 #define SETTINGS_SOUNDEVENT_ACTIVEEVENTS                   "soundevents/active-events"
 #define SETTINGS_SOUNDEVENT_ACTIVEEVENTS_DEFAULT    SoundEvents(SOUNDEVENT_NEWUSER | \
                                                     SOUNDEVENT_REMOVEUSER | \
